--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -4,7 +4,7 @@
 first_name: Stephanie
 studentNumber: z5479184 # if you're not at UNSW, your org name, e.g. BVN
 # accounts
-stackOverflowLink: https://stackoverflow.com/users/1835727/ben
+stackOverflowLink: https://stackoverflow.com/users/21977429/stephanie-duong
 github: stephduong
 # This format is called YAML which stands for Yet Another Markup Language
 # It's supposed to be machine readable, and human readable. It does a pretty
